cmake_minimum_required(VERSION 3.29)
project(ClassExamples)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(hello_world)
add_subdirectory(echo)
add_subdirectory(commandline_arguments)
add_subdirectory(string_stream)
add_subdirectory(pointers)
add_subdirectory(vectors)
add_subdirectory(linked_list)
add_subdirectory(smart_pointer)